Update JWT refresh expiration to 168 hours, refactor SQLC queries for user management, and enhance Swagger documentation. Introduce RBAC middleware for protected routes and improve user service to assign roles upon user creation. Adjust environment configurations and clean up unused code for better maintainability.
